--- a/deaddrop/securecore/static/securecore/css/base.css
+++ b/deaddrop/securecore/static/securecore/css/base.css
@@ -1,30 +1,67 @@
 .outer {
-    display: table;
-    position: absolute;
-    height: 100%;
-    width: 100%;
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 .middle {
-    display: table-cell;
-    vertical-align: middle;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .inner {
-    margin-left: auto;
-    margin-right: auto;
-    width: /*whatever width you want*/;
+  margin-left: auto;
+  margin-right: auto;
+  width: /*whatever width you want*/
+  ;
 }
 
 .mono {
   font-family: "Roboto Mono", monospace;
 }
 
-.subnav {
-}
+.subnav {}
 
 .red {
   color: #AA3333;
+}
+
+@media only screen and (min-width: 777px) {
+  .mobile-only {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 776px) {
+  .desktop-only {
+    display: none;
+  }
+}
+
+.fullwidth {
+  max-width: 100%;
+}
+
+.aligned {
+  display: -moz-flex;
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+}
+
+.aligned-item {
+  margin-top: 50px;
 }
 
 .white {
